--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -18,4 +18,4 @@ RUN go mod download
 
 RUN go mod tidy
 
-CMD CGO_ENABLED=0 go test .
+CMD CGO_ENABLED=0 go test --tags=integration server_integration_test.go
