--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -34,4 +34,5 @@ services:
      
 
 # Run Docker Compose   
-# docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit --exit-code-from rest
+# docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit --exit-code-from test
+# docker-compose -f docker-compose.test.yml up
