Clean docker file for integration test

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -16,6 +16,4 @@ RUN go get github.com/stretchr/testify/assert
 
 RUN go mod download
 
-RUN go mod tidy
-
-CMD CGO_ENABLED=0 go test --tags=integration server_integration_test.go
+CMD CGO_ENABLED=0 go test -v --tags=integration server_integration_test.go
